update spacing and fix html

--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@
     padding-top: 20px;
 }
 .img-container {
-    transform: scale(50%);
+    transform: scale(.5);
     display: inline-block;
     margin-right: -340px;
     margin-top: -460px;
